--- a/week 2/week 2 assignment.ipynb
+++ b/week 2/week 2 assignment.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "8d54e896-99e6-447e-b469-2f768fbc5827",
    "metadata": {},
    "outputs": [
@@ -119,13 +119,13 @@
        "4  MULTIPOLYGON (((-118.25413 33.94187, -118.2536...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf = gpd.read_file('losangeles.gpkg')\n",
+    "gdf = gpd.read_file('losangeles.gpkg', epsg='4326')\n",
     "gdf.head()"
    ]
   },
